methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:43: error: not found: value make0
    make0(ligne, 3+7*i)
    ^PictureMono2:49: error: not found: value make0
    make0(ligne, 0+7*i)
    ^